Bug 273894 - [WGSL] Pointers should not be unpacked
Summary: [WGSL] Pointers should not be unpacked
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2024-05-08 12:58 PDT by Tadeu Zagallo
Modified: 2024-05-10 09:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2024-05-08 12:58:52 PDT
...
Comment 1 Tadeu Zagallo 2024-05-08 12:59:03 PDT
<rdar://problem/127229681>
Comment 2 Tadeu Zagallo 2024-05-08 13:03:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/28304
Comment 3 EWS 2024-05-10 09:57:43 PDT
Committed 278613@main (a2a16a651663): <https://commits.webkit.org/278613@main>

Reviewed commits have been landed. Closing PR #28304 and removing active labels.