[WGSL] Pointers should not be unpacked https://bugs.webkit.org/show_bug.cgi?id=273894 rdar://127229681

Reviewed by Mike Wyrzykowski.

The fuzzer found a crash due to the base of an index access being incorrectly
unpacked when it was an address-of expression. We would always unpack unary
expressions, since math operations should be performed on unpacked values, but
for pointer operators (address-of and dereference) we do not need to force the
operand to be unpacked.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::visit):
(WGSL::RewriteGlobalVariables::getPacking):
* Source/WebGPU/WGSL/tests/valid/fuzz-127229681.wgsl: Added.

Canonical link: https://commits.webkit.org/278613@main